--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                      <a class="nav-link headerachor" href="home.html">Home</a>
+                      <a class="nav-link headerachor" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link headerachor" href="About us.html">About Us</a>
